FOIA-364: Fixes modal content overflow in IE11. (#96)

--- a/www.foia.gov/_sass/modules/_modal.scss
+++ b/www.foia.gov/_sass/modules/_modal.scss
@@ -30,6 +30,7 @@
 }
 
 .modal__inner {
+    max-height: 80vh; // Fixes ie11 bug.
     overflow: auto;
     padding: 2rem 3rem;
     flex-basis: 100%;
